[FIX]Mysql 연결 오류 트러블슈팅